--- a/CSE106/Lab_08/templates/index.html
+++ b/CSE106/Lab_08/templates/index.html
@@ -19,7 +19,7 @@
         <form>
             <!-- Username text box input-->
             <label  for="text-input">Username:</label>
-            <input type="text" id="usernameInput" name="text-input">
+            <input type="text" href="" id="usernameInput" name="text-input">
             
              <!-- Password text box input-->
             <label  for="text-input">Password:</label>
