--- a/CSE106/Lab_08/templates/myStudentCourses.html
+++ b/CSE106/Lab_08/templates/myStudentCourses.html
@@ -3,7 +3,7 @@
 
 <html>
     <head>
-        <link rel="stylesheet" type="text/css" href="\Users\Luis\Documents\Code\CSE106\Lab_08\HTML\styling.css">
+        <link rel="stylesheet" type="text/css" href="static\styling.css">
         <title>Lab 8</title>
     </head>
 
