--- a/CSE106/Lab_08/templates/teacherCourses.html
+++ b/CSE106/Lab_08/templates/teacherCourses.html
@@ -3,8 +3,8 @@
 
 <html>
     <head>
-        <link rel="stylesheet" type="text/css" href="\Users\Luis\Documents\Code\CSE106\Lab_08\HTML\styling.css">
-        <script src="\Users\Luis\Documents\Code\CSE106\Lab_08\Source\app.js"></script>
+        <link rel="stylesheet" type="text/css" href="static\styling.css">
+        <script src="static\script.js"></script>
         <title>Lab 8</title>
     </head>
 
