--- a/Lab08_MiniProject/Courses/static/teacher.css
+++ b/Lab08_MiniProject/Courses/static/teacher.css
@@ -1,58 +1,59 @@
-body{
+body {
   background-color: rgb(233, 166, 166);
+  text-align: center;
+  margin: auto;
 }
+
 button {
-    background-color: rgb(201, 93, 93);
-    color: white;
-    padding: 0.5rem 1rem;
-    border: none;
-    border-radius: 4px;
-    cursor: pointer;
-    margin-bottom: 1rem;
-  }
-  
-  button:hover {
-    background-color: rgb(214, 24, 21);
-  }
+  background-color: rgb(201, 93, 93);
+  color: white;
+  padding: 0.5rem 1rem;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+  margin-bottom: 1rem;
+}
 
-  .student_view{
-    text-align: center;
-    margin: auto;
-  }
-  #studentcourses{
-    text-align: center;
-    margin: auto;
-    padding: 0.5rem 1rem;
-    color: white;
-  }
+button:hover {
+  background-color: rgb(214, 24, 21);
+}
 
-  table, th, td {
-    border: 1px solid white;
-    border-collapse: collapse;
-    padding: 15px;
-    margin: 2pc;
-    color: white;
-  }
-  table{
-    text-align: center;
-    margin: auto;
-  }
-  body{
-  background-color: rgb(233, 166, 166);
-    text-align: center;
-    margin: auto2;
-  }
+.student_view {
+  text-align: center;
+  margin: auto;
+}
 
-  td:hover{
-    color: black;
-    background-color: white;
-  }
+#studentcourses {
+  text-align: center;
+  margin: auto;
+  padding: 0.5rem 1rem;
+  color: black; /* Changed to black */
+}
 
-  .center{
-    color: white;
-    text-align: center;
-    margin: auto;
-  }
-  h2{
-    color: white;
-  }
+table, th, td {
+  border: 1px solid black; /* Changed to black */
+  border-collapse: collapse;
+  padding: 15px;
+  margin: 2pc;
+  color: black; /* Changed to black */
+}
+
+table {
+  text-align: center;
+  margin: auto;
+}
+
+td:hover {
+  color: black;
+  background-color: white;
+}
+
+.center {
+  color: black; /* Changed to black */
+  text-align: center;
+  margin: auto;
+}
+
+h2 {
+  color: black; /* Changed to black */
+}
