--- a/Lab08_MiniProject/Courses/templates/studentEdit.html
+++ b/Lab08_MiniProject/Courses/templates/studentEdit.html
@@ -45,7 +45,7 @@
 				</tbody>
             </table><br>
 			<input type="text" id="adding_class" name="Class to Add">
-			<button type="button" class = "s_add_classes" id = "s_add_classes">Add Class</button><br>
+			<button type="button" class = "s_edit_classes" id = "s_edit_classes">Add Class</button><br>
 			<button type="button" class = "s_view_classes" id = "s_view_classes">Return to View Classes</button><br>
             <button type="button" class = "logout" id = "logoutStudentEdit">Log Out</button>
 		</div>
