--- a/Lab08_MiniProject/Courses/templates/studentview.html
+++ b/Lab08_MiniProject/Courses/templates/studentview.html
@@ -33,7 +33,7 @@
                     {% endfor %}</tbody>
             </table><br>
 
-            <button type="button" class = "s_edit_classes" id = "s_edit_classes">Add Classes</button><br>
+            <button type="button" class = "s_add_classes" id = "s_add_classes">Add Classes</button><br>
             <script src="../static/script.js"></script>
             <button type="button" class = "logout" id = "logoutStudentView">Log Out</button>
             <script src="../static/script.js"></script>
