--- a/Lab08_MiniProject/Courses/static/adminView.css
+++ b/Lab08_MiniProject/Courses/static/adminView.css
@@ -3,14 +3,14 @@ h1 {
     font-size: 2.5rem;
     margin-bottom: 1rem;
     text-align: center;
-    color: white;
+    color: rgb(0, 0, 0);
   }
   
   /* Style for the table */
   table {
     border-collapse: collapse;
     width: 100%;
-    border-color: white;
+    border-color: rgb(0, 0, 0);
   }
   
   th, td {
@@ -18,7 +18,7 @@ h1 {
     padding: 8px;
     border-bottom: 1px solid #ddd;
     color: black;
-    background-color: white;
+    background-color: rgb(239, 128, 128);
     
   }
   
@@ -28,7 +28,7 @@ h1 {
   
   /* Style for the form */
   body{
-    background-color: rgb(216, 163, 163);
+    background-color: rgb(231, 159, 159);
   }
 
   form {
@@ -38,7 +38,7 @@ h1 {
   label {
     font-size: 1.2rem;
     margin-right: 1rem;
-    color: white;
+    color: rgb(0, 0, 0);
   }
   
   input {
@@ -50,7 +50,7 @@ h1 {
   
   button {
     background-color: rgb(227, 89, 89);
-    color: white;
+    color: rgb(0, 0, 0);
     padding: 0.5rem 1rem;
     border: none;
     border-radius: 4px;
