--- a/Lab08_MiniProject/Courses/static/teacher.css
+++ b/Lab08_MiniProject/Courses/static/teacher.css
@@ -2,6 +2,27 @@ body {
   background-color: rgb(233, 166, 166);
   text-align: center;
   margin: auto;
+  color: black; 
+}
+
+
+h1, h2 {
+  color: black;
+}
+
+table, th, td {
+  border: 1px solid black;
+  border-collapse: collapse;
+  padding: 15px;
+  margin: auto;
+  text-align: center;
+}
+
+#studentcourses, #coursedetails {
+  text-align: center;
+  margin: auto;
+  padding: 0.5rem 1rem;
+  color: black;
 }
 
 button {
@@ -18,42 +39,48 @@ button:hover {
   background-color: rgb(214, 24, 21);
 }
 
-.student_view {
-  text-align: center;
+.form-group {
+  margin-bottom: 15px;
+  text-align: left;
+}
+
+.form-group label, .form-group input {
+  display: block;
   margin: auto;
+  text-align: left;
 }
 
-#studentcourses {
-  text-align: center;
-  margin: auto;
-  padding: 0.5rem 1rem;
-  color: black; /* Changed to black */
+#student_name, #edit_grade {
+  padding: 8px;
+  margin: 8px 0;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  width: 50%;
+  max-width: 300px; 
+  display: block; 
+  margin-left: auto;
+  margin-right: auto;
 }
 
-table, th, td {
-  border: 1px solid black; /* Changed to black */
-  border-collapse: collapse;
-  padding: 15px;
-  margin: 2pc;
-  color: black; /* Changed to black */
+.form-group label {
+  display: block;
+  margin-bottom: 5px; 
+  text-align: left;
+  width: 50%;
+  max-width: 300px;
+  margin-left: auto;
+  margin-right: auto;
 }
 
-table {
-  text-align: center;
-  margin: auto;
+
+.teacher_buttons button {
+  padding: 10px 15px;
+  margin-right: 10px;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
 }
 
-td:hover {
-  color: black;
-  background-color: white;
-}
-
-.center {
-  color: black; /* Changed to black */
-  text-align: center;
-  margin: auto;
-}
-
-h2 {
-  color: black; /* Changed to black */
+.teacher_buttons button:hover {
+  opacity: 0.9;
 }
